<resources>
    <string name="app_name">PetaLove</string>
    <string name="avFavorito">PetaLove - Favoritos</string>
    <string name="ab_titulo_Main">PetaLove</string>
    <string name="ab_titulo_Favoritos">PetaLove - Favoritos</string>
    <string name="ab_titulo_Perfil">PetaLove - Perfil</string>
    <string name="ab_titulo_AcercaDe">PetaLove - Acerca</string>
    <string name="ab_titulo_ConfigurarCuenta">PetaLove - Cuenta</string>
    <string name="tvMascotas_Favoritas">Mascotas Favoritas</string>
    <string name="tvPerfil">Ronny</string>
    <string name="menu_opContacto">Contacto</string>
    <string name="tvDesarrollador">Desarrollador:</string>
    <string name="menu_opAcercaDe">Acerca de</string>
    <string name="menu_opConfigCuenta">Configurar Cuenta</string>
    <string name="tvAcercaDe">Acerca de</string>
    <string name="tvDetalle_Nombre">    Nombre: Jose Maria Iñiguez</string>
    <string name="tvDetalle_Edad">      Edad:   36 años</string>
    <string name="tvDetalle_Email">     eMail:  jim_i011@yahoo.com</string>
    <string name="tvDetalle_Descripcion_titulo">Acerca de mi:</string>
    <string name="tvDetalle_Descripcion">Apasionado por la programación y el desarrollo de Apps para moviles y Web</string>
    <string name="in_nombre">Nombre</string>
    <string name="in_nombre_usuario">Escribe tu usuario</string>
    <string name="in_email">eMail</string>
    <string name="in_comentario">Comentario:</string>
    <string name="btnEnviar">Enviar Comentario</string>
    <string name="btnGuardarCuenta">Guardar Cuenta</string>
</resources>
